Almost Done with Html

--- a/index.html
+++ b/index.html
@@ -67,6 +67,195 @@
             </div>
         </div>
     </header>
-    
+    <!-- Now banner Section -->
+    <section class="banner">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="banner-content">
+                    <div class="row">
+                        <div class="banner-content-text">
+                            <h2 class="section-title">Play Like The</h2>
+                            <h1 class="gradient-color">G.O.A.T.</h1>
+                            <ul class="row">
+                                <li>
+                                    <P>
+                                        <i class="fa-regular fa-circle-play"></i>
+                                        1-Click instant play
+                                    </P>
+                                </li>
+                                <li>
+                                    <P>
+                                        <i class="fa-solid fa-download"></i>
+                                        No Download
+                                    </P>
+                                </li>
+                                <li>
+                                    <P>
+                                        <i class="fa-solid fa-user-group"></i>
+                                        1000s of supported online games
+                                    </P>
+                                </li>
+                            </ul>
+                            <div class="banner-btn">
+                                <a href="#" class="btn btn-1">Sign In</a>
+                                <a href="#" class="btn btn-2">Go Rogue</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="banner-content">
+                    <div class="banner-image">
+                        <img src="images/Group 18.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="gamer">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <div class="gamer-content">
+                    <div class="gamer-content-image">
+                        <img src="images/pngwing 4.png" alt="">
+                    </div>
+                </div>
+                <div class="gamer-content gamer-text">
+                    <div class="row justify-content-center">
+                        <div class="gamer-text-container">
+                            <h2 class="section-title gradient-color">We are gamer</h2>
+                            <p>An international digital games and entertainment company. We develop, publish and distribute multiplayer mobile games. We reach over 400 million players each month and our audience keeps growing.</p>
+                            <div class="gamer-btn">
+                                <a href="#" class="btn">know more</a>
+                            </div>
+                            <h1><span>Our purpose...</span><br>
+                                “unleash the gamer in everyone”
+                            </h1>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="online">
+        <div class="container">
+            <div class="online-header">
+                <h1 class="section-title">Online Games <span class="gradient-color">Funny Videos</span></h1>
+                <p>A Collection of Hilarious Videos to Brighten Your Day</p>
+            </div>
+            <div class="row justify-content-center">
+                <a href="#" class="online-card">
+                    <div class="online-card-image">
+                        <img src="images/Rectangle 4.png" alt="">
+                    </div>
+                    <div class="online-card-text">
+                        <p>No Download. No Installs. Play games Instantly on Gamer.</p>
+                    </div>
+                </a>
+                <a href="#" class="online-card">
+                    <div class="online-card-image">
+                        <img src="images/Rectangle 5.png" alt="">
+                    </div>
+                    <div class="online-card-text">
+                        <p>Did you score? #unblockedgames #school</p>
+                    </div>
+                </a>
+                <a href="#" class="online-card hover-state">
+                    <div class="online-card-image card-bg">
+                        <img src="images/Rectangle 7.png" alt="">
+                        <div class="play-btn">
+                            <p class="play-btn-icon">
+                                <i class="fa-solid fa-circle-play"></i>
+                            </p>
+                            <p class="watch-now">Watch Now</p>
+                        </div>
+                    </div>
+                    <div class="online-card-text">
+                        <p>Breaking game records like OG</p>
+                    </div>
+                </a>
+                <a href="#" class="online-card">
+                    <div class="online-card-image">
+                        <img src="images/Rectangle 6.png" alt="">
+                    </div>
+                    <div class="online-card-text">
+                        <p>Busted gaming on school laptop, but you are still lit.</p>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </section>
+
+    <!-- PLAY SECTION STARTS -->
+    <section class="play">
+        <div class="container">
+            <div class="row justify-content-center align-items-center">
+                <div class="play-content">
+                    <div class="row justify-content-center">
+                        <div class="play-text">
+                            <h1>
+                                <span class="gradient-color">Play Instantly,</span><br>
+                                No Downloads<br>
+                                No Installs.
+                            </h1>
+                            <p>Play games online for free without downloading. Just click the Play button and play instantly in your browser.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="play-content">
+                    <div class="play-image">
+                        <img src="images/Rectangle 55.png" alt="">
+                        <img src="images/Rectangle66.png" alt="" class="play-image-absolute">
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!-- PLAY SECTION ENDS -->
+
+    <!-- CATEGORY SECTION STARTS -->
+    <section class="category">
+        <div class="container">
+            <div class="row align-items-center justify-content-center">
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle11.png" alt="">
+                    <p>Action Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle12.png" alt="">
+                    <p>Adventure Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle13.png" alt="">
+                    <p>Arcade Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle14.png" alt="">
+                    <p>Educational Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle15.png" alt="">
+                    <p>Word Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle16.png" alt="">
+                    <p>Role Palying Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle17.png" alt="">
+                    <p>Music & Audio Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle18.png" alt="">
+                    <p>Puzzle Games</p>
+                </a>
+                <a href="#" class="row category-item align-items-center">
+                    <img src="images/Rectangle19.png" alt="">
+                    <p>Strategy Games</p>
+                </a>
+            </div>
+        </div>
+    </section>
+    <!-- CATEGORY SECTION ENDS -->
 </body>
 </html>
