--- a/index.html
+++ b/index.html
@@ -257,5 +257,106 @@
         </div>
     </section>
     <!-- CATEGORY SECTION ENDS -->
+
+
+    <!-- FOOTER SECTION STARTS -->
+    <footer class="footer">
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="footer-logo">
+                    <a href="#" class="row align-items-center">
+                        <div class="footer-logo-image">
+                            <img src="images/Frame.png" alt="Logo">
+                        </div>
+                        <div class="footer-logo-text">
+                            <p><span>G</span>amer</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="footer-links">
+                    <ul class="row align-items-center justify-content-center">
+                        <li>
+                            <a href="#">Our Story</a>
+                        </li>
+                        <li>
+                            <a href="#">Games</a>
+                        </li>
+                        <li>
+                            <a href="#">Web Games</a>
+                        </li>
+                        <li>
+                            <a href="#">Careers</a>
+                        </li>
+                        <li>
+                            <a href="#">Support</a>
+                        </li>
+                        <li>
+                            <a href="#">My Account</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="footer-social">
+                    <ul class="row align-items-center justify-content-center">
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-facebook"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-youtube"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-linkedin-in"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa-brands fa-apple"></i>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="row justify-content-center">
+                <div class="footer-rules">
+                    <ul class="row align-items-center justify-content-center">
+                        <li>
+                            <a href="#">Terms and Conditions</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Cookie Policy</a>
+                        </li>
+                        <li>
+                            <a href="#">Privacy Settings</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer-copyright text-center">
+                <p>Play Games &#64; Gamer<span> &#64; 2000-2023 Gamer Bangladesh</span></p>
+            </div>
+        </div>
+    </footer>
+    <!-- FOOTER SECTION ENDS -->
 </body>
 </html>
